Рефакторинг тестов